# jefer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: qa-check.yml  release.yml  test-suite.yml
docs/: conf.py  index.md  index.rst  license.md  mkdocs.yml
docs/about-the-project/: alternatives-to-jefer.md  features-jefer-offers.md  software-specification.md  why-was-jefer-created.md
docs/contributing-to-the-project/: developer-guidelines.md  distribution-and-release-guidelines.md  setting-up-the-development-environment.md
docs/usage-and-installation-guidelines/: how-to-install-jefer.md  how-to-use-jefer.md
jefer/: main.py
