[tool.poetry]
name = "jefer"
version = "0.0.1"
description = "A simple dotfiles manager written in Asynchronous Python code."
authors = ["Somraj Saha <somraj.mle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
