[tool.poetry]
name = "jefer"
version = "0.0.3"
description = "A simple dotfiles manager written in asynchronous Python code."
authors = ["Somraj Saha <somraj.mle@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.scripts]
jefer = "jefer.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
black = "^22.8.0"
mypy = "^0.971"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
mkdocs-material = "^8.5.3"
Pillow = "^9.2.0"
CairoSVG = "^2.5.2"

[tools.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
