[tool.poetry]
name = "jefer"
version = "0.1.0"
description = "A simple dotfiles manager written in asynchronous Python code."
authors = ["Somraj Saha <somraj.mle@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.scripts]
jefer = "jefer.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = ">=0.6.1,<0.8.0"}

[tool.poetry.dev-dependencies]
pydocstyle = "^6.2.3"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"
mkdocs-material = "^9.0.3"
Pillow = "^9.4.0"
CairoSVG = "^2.5.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
homebrew-pypi-poet = "^0.10.0"

[tools.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
